# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache Software License 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0, or the MIT license
# which is available at https://opensource.org/licenses/MIT.
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

package(default_visibility = ["//visibility:public"])

load("@bazel_skylib//lib:selects.bzl", "selects")
load("@rules_rust//rust:defs.bzl", "rust_library")

filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
)

config_setting(
    name = "dev_permissions_auto",
    flag_values = {
        "//:feature_dev_permissions": "auto",
    },
)

config_setting(
    name = "dev_permissions_enabled",
    flag_values = {
        "//:feature_dev_permissions": "on",
    },
)

# NOTE: while this seems superfluous, it is the pattern for cases where *_auto is on by default;
#       therefore this target is introduced to keep all feature flags consistent
selects.config_setting_group(
    name = "cfg_feature_dev_permissions",
    match_any = [
        ":dev_permissions_enabled",
    ],
)

rust_library(
    name = "iceoryx2-cal",
    srcs = glob(["src/**/*.rs"]),
    crate_features = select({
        "cfg_feature_dev_permissions": [
            "dev_permissions"
        ],
        "//conditions:default": [],
    }),
    deps = [
        "//iceoryx2-bb/container:iceoryx2-bb-container",
        "//iceoryx2-bb/elementary:iceoryx2-bb-elementary",
        "//iceoryx2-bb/lock-free:iceoryx2-bb-lock-free",
        "//iceoryx2-bb/log:iceoryx2-bb-log",
        "//iceoryx2-bb/memory:iceoryx2-bb-memory",
        "//iceoryx2-bb/posix:iceoryx2-bb-posix",
        "//iceoryx2-bb/system-types:iceoryx2-bb-system-types",
        "//iceoryx2-pal/concurrency-sync:iceoryx2-pal-concurrency-sync",
        "@crate_index//:cdr",
        "@crate_index//:lazy_static",
        "@crate_index//:once_cell",
        "@crate_index//:ouroboros",
        "@crate_index//:serde",
        "@crate_index//:sha1_smol",
        "@crate_index//:tiny-fn",
        "@crate_index//:toml",
    ],
)

# TODO: [349] add tests
