# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache Software License 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0, or the MIT license
# which is available at https://opensource.org/licenses/MIT.
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test_suite")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
)

rust_library(
    name = "iceoryx2-cal",
    srcs = glob(["src/**/*.rs"]),
    crate_features = select({
        "//:cfg_feature_dev_permissions": [
            "dev_permissions",
        ],
        "//conditions:default": [],
    }) + select({
        "//:cfg_feature_std": [
            "std",
        ],
        "//conditions:default": [],
    }),
    proc_macro_deps = [
        "//iceoryx2-bb/derive-macros:iceoryx2-bb-derive-macros",
    ],
    deps = [
        "//iceoryx2-bb/container:iceoryx2-bb-container",
        "//iceoryx2-bb/elementary:iceoryx2-bb-elementary",
        "//iceoryx2-bb/elementary-traits:iceoryx2-bb-elementary-traits",
        "//iceoryx2-bb/linux:iceoryx2-bb-linux",
        "//iceoryx2-bb/lock-free:iceoryx2-bb-lock-free",
        "//iceoryx2-log/log:iceoryx2-log",
        "//iceoryx2-bb/memory:iceoryx2-bb-memory",
        "//iceoryx2-bb/posix:iceoryx2-bb-posix",
        "//iceoryx2-bb/system-types:iceoryx2-bb-system-types",
        "//iceoryx2-bb/concurrency:iceoryx2-bb-concurrency",
        "@crate_index//:lazy_static",
        "@crate_index//:postcard",
        "@crate_index//:serde",
        "@crate_index//:sha1_smol",
        "@crate_index//:tiny-fn",
        "@crate_index//:toml",
    ],
)

rust_test_suite(
    name = "iceoryx2-cal-tests",
    srcs = glob(["tests/**/*.rs"]),
    proc_macro_deps = [
        "@crate_index//:generic-tests",
    ],
    deps = [
        ":iceoryx2-cal",
        "//iceoryx2-bb/container:iceoryx2-bb-container",
        "//iceoryx2-bb/elementary:iceoryx2-bb-elementary",
        "//iceoryx2-bb/elementary-traits:iceoryx2-bb-elementary-traits",
        "//iceoryx2-bb/lock-free:iceoryx2-bb-lock-free",
        "//iceoryx2-bb/memory:iceoryx2-bb-memory",
        "//iceoryx2-bb/posix:iceoryx2-bb-posix",
        "//iceoryx2-bb/system-types:iceoryx2-bb-system-types",
        "//iceoryx2-bb/testing:iceoryx2-bb-testing",
        "//iceoryx2-bb/concurrency:iceoryx2-bb-concurrency",
        "//iceoryx2-bb/loggers:iceoryx2-bb-loggers",
        "@crate_index//:serde",
    ],
)
