[package]
name = "iceoryx2-cal"
description = "Iceoryx2: [internal] high-level traits and implementations that represents OS primitives in an exchangeable fashion"
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
iceoryx2-bb-posix = { workspace = true }
iceoryx2-bb-container = { workspace = true }
iceoryx2-bb-system-types = { workspace = true }
iceoryx2-bb-log = { workspace = true }
iceoryx2-bb-elementary = { workspace = true }
iceoryx2-bb-memory = { workspace = true }
iceoryx2-bb-lock-free = { workspace = true }
iceoryx2-bb-threadsafe = { workspace = true }
iceoryx2-bb-testing = { workspace = true }

once_cell = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
cdr = { workspace = true }
toml = { workspace = true }
sha1_smol = { workspace = true }
tiny-fn = { workspace = true }
ouroboros = { workspace = true }

[dev-dependencies]
iceoryx2-pal-posix = { workspace = true }
generic-tests = { workspace = true }
pin-init = { workspace = true }
