[package]
name = "iceoryx2-cli"
description = "CLI tools for iceoryx2"

categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata]
default-run = "iox2"

[[bin]]
name = "iox2"
path = "iox2/src/main.rs"

[[bin]]
name = "iox2-node"
path = "iox2-node/src/main.rs"

[[bin]]
name = "iox2-service"
path = "iox2-service/src/main.rs"

[lib]
name = "iceoryx2_cli"
path = "lib/src/lib.rs"

[dependencies]
iceoryx2 = { workspace = true }
iceoryx2-bb-log = { workspace = true }
iceoryx2-pal-posix = {workspace = true}

anyhow = { workspace = true }
better-panic = { workspace = true }
cargo_metadata = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
human-panic = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }

[dev-dependencies]
iceoryx2-bb-testing = { workspace = true }
tempfile = { workspace = true }
