[package]
name = "iceoryx2-cli"
description = "CLI tools for iceoryx2"

categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata]
default-run = "iox2"

[[bin]]
name = "iox2"
path = "iox2/src/main.rs"

[[bin]]
name = "iox2-node"
path = "iox2-node/src/main.rs"

[[bin]]
name = "iox2-service"
path = "iox2-service/src/main.rs"

[[bin]]
name = "iox2-config"
path = "iox2-config/src/main.rs"

[[bin]]
name = "iox2-tunnel"
path = "iox2-tunnel/src/main.rs"

[lib]
name = "iceoryx2_cli"
path = "lib/src/lib.rs"

[dependencies]
iceoryx2-services-discovery = { workspace = true }
iceoryx2 = { workspace = true }
iceoryx2-bb-log = { workspace = true }
iceoryx2-pal-posix = { workspace = true }
iceoryx2-bb-posix = { workspace = true }
iceoryx2-bb-system-types = { workspace = true }
iceoryx2-bb-container = { workspace = true }
iceoryx2-bb-elementary = { workspace = true }
iceoryx2-cal = { workspace = true }
iceoryx2-userland-record-and-replay = { workspace = true }

anyhow = { workspace = true }
better-panic = { workspace = true }
cargo_metadata = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
enum-iterator = { workspace = true }
human-panic = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
dialoguer = { workspace = true }

# Zenoh does not build on FreeBSD
[target.'cfg(not(target_os = "freebsd"))'.dependencies]
iceoryx2-tunnels-zenoh = { workspace = true }
zenoh = { workspace = true }

[dev-dependencies]
iceoryx2-bb-testing = { workspace = true }
iceoryx2-pal-testing = { workspace = true }
tempfile = { workspace = true }
