[package]
name = "iceoryx2-dmabuf"
description = "iceoryx2: typed DMA-BUF transport via parallel dmabuf::Service variant"
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[features]
default = ["std"]
std = ["iceoryx2/std"]
## Enables the typed DMA-BUF transport layer. Linux only.
dma-buf = ["dep:dma-buf"]

[dependencies]
iceoryx2 = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
rustix = { version = "1", features = ["fs", "net", "mm"] }
libc = { workspace = true }
dma-buf = { version = "0.5", optional = true }

[dev-dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "linux")'.dev-dependencies]
dma-heap = "0.3"

[[test]]
name = "shm_tests"
path = "tests/shm_tests.rs"
